<resources>
    <string name="tab_lottery_title_hint">彩票</string>
    <string name="tab_chess_title_hint">棋牌</string>
    <string name="tab_pay_title_hint">钱包</string>
    <string name="tab_server_title_hint">服务</string>
    <string name="tab_me_title_hint">我的</string>
    <string name="app_home_hint">主页</string>
    <string name="app_lobby_hint">购彩</string>
    <string name="app_pay_hint">充值</string>
    <string name="app_me_hint">我的</string>
    <string name="app_server_hint">服务</string>
    <string name="app_future_hint">敬请期待!</string>

    <string name="bet_lottery_title_hint">返回主页</string>
    <string name="bet_lottery_hot_hint">热门彩种</string>
    <string name="bet_lottery_attention_hint">我的关注</string>
    <string name="system_download_component_disable">下载服务不可用,请您启用</string>
    <string name="update_error_info_hint">非常的抱歉，更新不到完整的安装包，请卸载，再到官网下载最新的安装包.谢谢您的体谅.</string>
    <string name="app_cancel_hint">取消</string>
    <string name="app_sure_hint">确定</string>
    <string name="dialog_title_tips">提示</string>
    <string name="dialog_input_hint">请输入内容</string>
    <string name="please_server_hint">请联系客服</string>
    <string name="app_login_hint">登录</string>
    <string name="app_loading_hint">加载中...</string>
    <string name="bet_select_hint">共%1$d注: </string>
    <string name="bet_total_money_hint">余额:%1$s元</string>
    <string name="bet_single_money_max_hint">单注最高下注500000</string>
    <string name="bet_single_field_money_max_hint">单场最高下注5000000</string>
    <string name="bet_red_pack_spell_hint">拼手气红包</string>
    <string name="bet_red_pack_countdown_hint">红包倒计时:</string>
    <string name="bet_red_pack_open_time_hint">开抢倒计时:</string>
    <string name="bet_red_pack_end_time_hint">红包已抢完</string>
    <string name="bet_red_pack_get_hint">哇!恭喜您抢到红包</string>
    <string name="bet_state_hint">距离封盘:</string>
    <string name="bet_curperiod_hint">当期注单</string>
    <string name="bet_helper_hint">投注助手</string>
    <string name="bet_clear_hint">清除成功，点击确定返回选择投注项目</string>
    <string name="bet_del_hint">已无投注选项，点击确定返回选择投注项目</string>
    <string name="bet_entertained_hint">当前期数投注超时，正在开奖..</string>
    <string name="bet_entertained_please_just_hint">正在开奖，请稍等</string>
    <string name="bet_curperiod_error_hint">当前期号错误</string>
    <string name="bet_success_hint">投注成功，点击确定返回</string>
    <string name="bet_balance_not_hint">余额不足!</string>
    <string name="bet_please_money_hint">请选择投注金额</string>
    <string name="bet_money_max_balance_hint">投注金额:%1$s元不能大于当前余额:%2$s元</string>
    <string name="bet_check_min_number_hint">最少选中%1$d号码</string>
    <string name="bet_check_error_number_hint">投注内容错误</string>
    <string name="bet_max_hint">超过最大选中的%1$d号码</string>
    <string name="bet_check_duplicate_hint">选择号码重复</string>
    <string name="bet_sure_title_hint">确定注单</string>
    <string name="bet_open_lottery_hint">正在开奖...</string>
    <string name="bet_explain_result_hint">开奖结果</string>
    <string name="bet_explain_basic_hint">基本走势</string>
    <string name="bet_explain_play_hint">玩法说明</string>
    <string name="bet_explain_share_hint">摇晃机选</string>
    <string name="bet_explain_sound_hint">游戏声音</string>
    <string name="bet_explain_white_mode_hint">白天模式</string>
    <string name="bet_explain_night_mode_hint">夜间模式</string>
    <string name="bet_explain_today_hint">今日输赢</string>
    <string name="bet_expect_number_hint">期号</string>
    <string name="bet_time_check_hint">时间筛选</string>
    <string name="bet_area_money_hint">元</string>
    <string name="bet_area_clear_hint">清空</string>
    <string name="bet_area_sure_hint">投注</string>
    <string name="bet_area_reset_hint">重置</string>
    <string name="bet_area_chips_setting_hint">筹码设定</string>
    <string name="bet_odds_hint">赔率:%1$s</string>
    <string name="bet_money_hint">%1$s元</string>
    <string name="bet_select_size_hint">%1$d注</string>
    <string name="bet_sure_cur_period_hint">当前期号:第%1$d期</string>
    <string name="bet_order_name_hint">%1$s&#32;&#32;第%2$s期</string>
    <string name="bet_order_result_hint">赔率%1$s×%2$s元</string>
    <string name="bet_order_detail_hint">投注内容:%1$s</string>
    <string name="bet_sliding_balance_hint"> 余额：%1$s 元</string>
    <string name="bet_sure_balance_hint">余额：</string>
    <string name="bet_cur_period_hint">第%1$s期</string>
    <string name="bet_up_to_hint">截至投注:</string>
    <string name="bet_pattern_hint">模式:</string>
    <string name="bet_shortcut_hint">快捷投注:</string>
    <string name="bet_rule_hint">我已阅读并同意《委托投注规则》</string>
    <string name="bet_min_max_hint">单注最低:￥1  单注最高:￥500000  单场最高:￥5000000</string>
    <string name="bet_project_error_hint">请选择投注项目</string>
    <string name="bet_lottery_money_hint">总下注额:</string>
    <string name="bet_lottery_total_money_hint">%1$s元</string>
    <string name="today_win_hint">(%1$s元)</string>
    <string name="bet_k_three_point_hint">点数</string>
    <string name="bet_k_three_point_number_hint">%1$s点</string>
    <string name="bet_input_hint">请输入金额</string>

    <string name="login_account_hint">账号:</string>
    <string name="login_pwd_hint">密码:</string>
    <string name="login_account_input_hint">请输入账号</string>
    <string name="login_pwd_input_hint">请输入密码</string>
    <string name="login_loging_hint">立即登录</string>
    <string name="login_demo_hint">免费试玩</string>
    <string name="login_register_hint">立即注册</string>
    <string name="login_foget_pwd_hint">忘记密码</string>
    <string name="app_not_network_hint">暂无网络，请检查网络是否可用!</string>
    <string name="login_tourist_hint">游客账号无权访问，去注册？</string>
    <string name="login_not_hint">请登录开启红包，前往登陆？</string>

    <string name="app_update_manual_hint">双击手动更新</string>
    <string name="app_update_version_hint">更新中,请稍候...</string>
    <string name="app_update_version_content_hint">本次更新内容:\n\n%1$s</string>
    <string name="app_upkeep_title_hint">温馨提示</string>
    <string name="app_upkeep_server_hint">联系客服</string>
    <string name="app_upkeep_exit_hint">退出应用</string>
    <string name="app_no_permission_hint">缺少必要权限，应用即将关闭</string>


    <string name="lobby_cur_period_hint">距离第%1$s期截止还有:</string>
    <string name="lobby_number_hint">号码走势</string>
    <string name="lobby_play_hint">玩法说明</string>

    <string name="server_title_hint">服务大厅</string>
    <string name="server_online_hint">在线客服</string>
    <string name="server_qq_hint">QQ客服</string>
    <string name="server_weixin_hint">微信客服</string>
    <string name="server_qrcode_long_hint">长按二维码保存到相册</string>
    <string name="server_qrcode_hint_hint">微信客服二维码</string>
    <string name="server_proxy_title_hint">独家代理申请</string>
    <string name="server_proxy_content_hint">点击在线申请独家代理</string>
    <string name="server_discounts_title_hint">优惠大厅</string>
    <string name="server_discounts_content_hint">丰富活动现已全新上线</string>
    <string name="server_question_tile_hint">常见问题</string>
    <string name="server_question_content_hint">常见问题都汇总在这里</string>
    <string name="server_complain_title_hint">投诉部门</string>
    <string name="server_complain_content_hint">让我们为您提供更好的服务</string>


    <string name="server_not_qq_client_hint">"您的QQ版本过低或您当前未安装QQ,请安装最新版QQ后再试!</string>
    <string name="pay_home_balance_hint">账户余额（元）</string>
    <string name="pay_home_account_pay_title_hint">账户充值</string>
    <string name="pay_home_account_pay_content_hint">支持银行卡、支付宝、财付通、微信等充值方式</string>
    <string name="pay_home_withdraw_title_hint">账户提现</string>
    <string name="pay_home_withdraw_content_hint">支持各大银行及地方银行提现</string>
    <string name="pay_home_history_title_hint">充提记录</string>
    <string name="pay_home_history_content_hint">支持充值、提现明细查询</string>
    <string name="pay_setting_pay_pwd_title_hint">设置支付密码</string>
    <string name="pay_setting_pay_pwd_hint">请输入4位数字的支付密码</string>
    <string name="pay_setting_pwd_hint">请输入支付密码</string>
    <string name="pay_setting_re_pwd_hint">再次输入支付密码</string>
    <string name="pay_history_money_hint">%1$s元</string>
    <string name="pay_current_account_hint">当前账号：%1$s</string>
    <string name="pay_risk_hint">温馨提示:所有二维码和银行账户都是不定期更换的,请勿保存账户进行转账,以页面显示的最新账户为准.</string>
    <string name="pay_min_max_hint">单笔最低充值金额%1$s元,最高金额不超过%2$s元</string>
    <string name="pay_min_hint">充值金额不能小于最低限制金额</string>
    <string name="pay_max_hint">充值金额不能大于最大限制金额</string>
    <string name="pay_withdraw_not_hint">提现金额不能为空</string>
    <string name="pay_withdraw_max_hint">提现金额%1$s元\n不能大于可提款金额%2$s元</string>
    <string name="pay_withdraw_error_hint">提现金额:%1$s元不能大于\n当前余额:%2$s元</string>
    <string name="pay_scan_tips_one_hint">温馨提示：\n1.点击“立即支付”将自动为保存二维码图片到相册，同时打开微信。\n2.请在微信中打开“扫一扫”。\n3.在扫一扫中点击右上角“相册”，从相册中选择刚才保存的二维码。\n4.在微信在中完成支付后，回到此页面点击“我已支付”。\n5.如充值未及时到账，请联系在线客服。</string>
    <string name="pay_scan_tip_two_hint">温馨提示：\n1.点击“立即支付”将自动为您保存二维码到相册，同时打开微信。\n2.请在微信中打开扫一扫。\n3.在扫一扫中点击右上角“相册”，从相册中选择刚才保存的二维码。\n4.输入支付金额，备注填写备注码。\n5.在微信中完成支付后，回到此页面点击“我已支付”即可到账。\n6.如充值未及时到账，请联系在线客服。</string>
    <string name="pay_remark_code_hint">备注码:%1$s</string>
    <string name="pay_auto_income_hint">扫码支付时,请务必备注%1$s</string>
    <string name="pay_auto_income_account_hint">会员账号</string>
    <string name="pay_history_detail_money_hint">金额</string>
    <string name="pay_history_detail_type_hint">类型</string>
    <string name="pay_history_detail_state_hint">状态</string>
    <string name="pay_history_detail_description_hint">描述</string>
    <string name="pay_history_detail_number_hint">流水号</string>
    <string name="pay_history_detail_time_hint">时间</string>
    <string name="me_user_info_photo_album">从手机相册选择</string>
    <string name="me_user_info_photo_camera">立即拍照</string>
    <string name="me_level_title_hint">会员等级</string>
    <string name="me_wallet_title_hint">我的钱包</string>
    <string name="me_history_wait_hint">待开奖</string>
    <string name="me_history_win_hint">已中奖</string>
    <string name="me_history_nowin_hint">未中奖</string>
    <string name="me_betting_history_win_money_hint">中奖（元）\n%1$s</string>
    <string name="me_betting_history_bet_money_hint">投注（元）\n%1$s</string>
    <string name="me_betting_history_profit_money_hint">盈利（元）\n%1$s</string>
    <string name="me_betting_history_open_number_hint">开奖号码</string>
    <string name="me_betting_history_entered_hint">距离封盘:</string>
    <string name="me_betting_history_bet_detail_hint">投注详情</string>
    <string name="me_betting_history_session_hint">场次</string>
    <string name="me_betting_history_bet_content_hint">投注内容</string>
    <string name="me_betting_history_winning_balance_hint">中奖金额</string>
    <string name="me_betting_history_continue_hint">继续购买</string>
    <string name="me_setting_change_login_pwd_hint">登录密码修改</string>
    <string name="me_setting_change_pay_pwd_hint">支付密码修改</string>
    <string name="me_setting_change_please_old_hint">请输入原密码</string>
    <string name="me_setting_change_please_new_hint">请输入新密码</string>
    <string name="me_setting_change_please_renew_hint">再次输入新密码</string>
    <string name="me_setting_change_please_pay_hint">请输入4位数字的支付密码</string>
    <string name="me_setting_change_please_login_hint">请输入6-20位数字字母组合的密码</string>
    <string name="setting_change_pwd_hint">密码修改成功</string>
    <string name="me_setting_about_hint">关于我们</string>
    <string name="me_setting_clear_hint">清除缓存</string>
    <string name="me_setting_night_hint">夜间模式</string>
    <string name="me_setting_logout_hint">注销登录</string>
    <string name="me_setting_check_version_hint">检测新版本</string>
    <string name="me_setting_now_version_hint">已是最新版本</string>
    <string name="me_betting_history_order_hint">订单号&#32;&#32;&#32;&#32;&#32;&#32;%1$s</string>
    <string name="me_betting_history_time_hint">支付时间&#32;&#32;&#32;&#32;%1$s</string>
    <string name="me_betting_history_hint_hint">温馨提示&#32;&#32;&#32;&#32;如中奖万元以上奖金专人通知,万\n元以下奖金直接打入账户</string>
    <string name="app_white_mode_hint">白天</string>
    <string name="app_night_mode_hint">夜间</string>
</resources>
