<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/wait"
            android:title="@string/me_history_wait_hint"
            android:icon="@drawable/main_lottery_selector_drawable"
            android:iconTint="@android:color/transparent"/>
    <item
            android:id="@+id/win"
            android:icon="@drawable/main_chess_selector_drawable"
            android:iconTint="@android:color/transparent"
            android:title="@string/me_history_win_hint"/>
    <item
            android:id="@+id/nowin"
            android:icon="@drawable/main_wallet_selector_drawable"
            android:iconTint="@android:color/transparent"
            android:title="@string/me_history_nowin_hint"/>
</menu>